reviews/go-reviews-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-service-reviews
  name: go-service-reviews 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-service-reviews
  template:
    metadata:
      labels:
        app: go-service-reviews 
    spec:
      containers:
      - image: techacademyti/go-service-reviews
        imagePullPolicy: Always
        name: go-service-reviews
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80
