reviews/go-reviews-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviews
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "reviews.143-244-213-51.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-service-reviews-v2
            port:
              number: 80
